--- a/packages/slate-analytics/package.json
+++ b/packages/slate-analytics/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/slate-analytics",
-  "version": "1.0.0-beta.16",
+  "version": "1.0.0-theta.0",
   "description": "Slate's analytics controller and event emitter",
   "main": "index.js",
   "scripts": {
