--- a/packages/slate-sync/package.json
+++ b/packages/slate-sync/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/slate-sync",
-  "version": "1.0.0-beta.16",
+  "version": "1.0.0-theta.0",
   "description": "Slate's Shopify API client which handles all theme development requests",
   "repository": "https://github.com/Shopify/slate/tree/1.x/packages/slate-sync",
   "license": "MIT",
@@ -11,7 +11,7 @@
   },
   "engine": ">=8.9.4",
   "dependencies": {
-    "@shopify/slate-analytics": "1.0.0-beta.16",
+    "@shopify/slate-analytics": "1.0.0-theta.0",
     "@shopify/slate-config": "1.0.0-beta.14",
     "@shopify/slate-env": "1.0.0-beta.16",
     "@shopify/themekit": "^1.1.6",
