--- a/packages/slate-tools/package.json
+++ b/packages/slate-tools/package.json
@@ -60,7 +60,6 @@
     "mini-css-extract-plugin": "^0.4.3",
     "minimatch": "^3.0.4",
     "minimist": "1.2.0",
-    "node-sass": "^4.11.0",
     "ora": "^2.0.0",
     "portscanner": "^2.2.0",
     "postcss-loader": "2.1.1",
@@ -68,14 +67,15 @@
     "prettier": "^1.10.2",
     "raw-loader": "^0.5.1",
     "react-dev-utils": "0.5.2",
-    "sass-loader": "6.0.7",
+    "sass": "1.64.2",
+    "sass-loader": "10.2.0",
     "style-loader": "0.20.3",
     "stylelint": "^9.1.2",
     "stylelint-webpack-plugin": "^0.10.1",
     "tapable": "^1.0.0",
     "uglifyjs-webpack-plugin": "^1.0.1",
     "uuid": "^3.2.1",
-    "webpack": "^4.1.1",
+    "webpack": "4.36.1",
     "webpack-dev-middleware": "3.4.0",
     "webpack-hot-middleware": "2.21.2",
     "webpack-merge": "4.1.2",
