--- a/packages/slate-tools/package.json
+++ b/packages/slate-tools/package.json
@@ -29,17 +29,17 @@
     "autoprefixer": "6.7.7",
     "babel-cli": "6.26.0",
     "babel-jest": "20.0.3",
-    "babel-loader": "7.1.4",
+    "babel-loader": "^9.1.3",
     "browser-sync": "^2.24.6",
     "chalk": "2.3.2",
-    "clean-webpack-plugin": "0.1.19",
-    "concat-style-loader": "1.0.0-beta.14",
+    "clean-webpack-plugin": "^4.0.0",
+    "concat-style-loader": "^1.0.0-beta.14",
     "console-control-strings": "^1.1.0",
-    "copy-webpack-plugin": "^4.2.3",
+    "copy-webpack-plugin": "^11.0.0",
     "cors": "^2.8.4",
     "cross-spawn": "5.1.0",
-    "css-loader": "0.28.10",
-    "cssnano": "3.10.0",
+    "css-loader": "^6.8.1",
+    "cssnano": "^6.0.1",
     "escape-string-regexp": "1.0.5",
     "eslint": "^4.12.0",
     "eslint-loader": "2.0.0",
@@ -48,36 +48,37 @@
     "extract-loader": "^2.0.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "figures": "^2.0.0",
-    "file-loader": "1.1.11",
+    "file-loader": "^6.2.0",
     "fs-extra": "3.0.1",
-    "html-loader": "^0.5.5",
-    "html-webpack-include-assets-plugin": "^1.0.4",
-    "html-webpack-plugin": "^3.0.6",
+    "html-loader": "^4.2.0",
+    "html-webpack-include-assets-plugin": "^2.0.0",
+    "html-webpack-plugin": "^5.5.3",
     "img-loader": "2.0.1",
     "inquirer": "^5.0.1",
     "ip": "^1.1.5",
     "jest": "22.4.2",
-    "mini-css-extract-plugin": "^0.4.3",
+    "mini-css-extract-plugin": "^2.7.6",
     "minimatch": "^3.0.4",
     "minimist": "1.2.0",
     "ora": "^2.0.0",
     "portscanner": "^2.2.0",
-    "postcss-loader": "2.1.1",
+    "postcss": "^8.4.31",
+    "postcss-loader": "^7.3.3",
     "postcss-reporter": "^5.0.0",
     "prettier": "^1.10.2",
     "raw-loader": "^0.5.1",
     "react-dev-utils": "0.5.2",
     "sass": "1.64.2",
-    "sass-loader": "10.2.0",
-    "style-loader": "0.20.3",
-    "stylelint": "^9.1.2",
-    "stylelint-webpack-plugin": "^0.10.1",
+    "sass-loader": "^13.3.2",
+    "style-loader": "^3.3.3",
+    "stylelint": "^15.11.0",
+    "stylelint-webpack-plugin": "^4.1.1",
     "tapable": "^1.0.0",
-    "uglifyjs-webpack-plugin": "^1.0.1",
+    "terser-webpack-plugin": "^5.3.9",
     "uuid": "^3.2.1",
-    "webpack": "4.36.1",
-    "webpack-dev-middleware": "3.4.0",
-    "webpack-hot-middleware": "2.21.2",
+    "webpack": "^5.89.0",
+    "webpack-dev-middleware": "^6.1.1",
+    "webpack-hot-middleware": "^2.25.4",
     "webpack-merge": "4.1.2",
     "write-file-webpack-plugin": "4.4.0",
     "yamljs": "0.2.10",
