--- a/packages/slate-tools/package.json
+++ b/packages/slate-tools/package.json
@@ -38,7 +38,7 @@
     "copy-webpack-plugin": "^4.2.3",
     "cors": "^2.8.4",
     "cross-spawn": "5.1.0",
-    "css-loader": "0.28.10",
+    "css-loader": "^5.2.7",
     "cssnano": "3.10.0",
     "escape-string-regexp": "1.0.5",
     "eslint": "^4.12.0",
@@ -57,19 +57,20 @@
     "inquirer": "^5.0.1",
     "ip": "^1.1.5",
     "jest": "22.4.2",
-    "mini-css-extract-plugin": "^0.4.3",
+    "mini-css-extract-plugin": "^0.12.0",
     "minimatch": "^3.0.4",
     "minimist": "1.2.0",
     "ora": "^2.0.0",
     "portscanner": "^2.2.0",
-    "postcss-loader": "2.1.1",
+    "postcss": "^8.4.31",
+    "postcss-loader": "^4.2.0",
     "postcss-reporter": "^5.0.0",
     "prettier": "^1.10.2",
     "raw-loader": "^0.5.1",
     "react-dev-utils": "0.5.2",
     "sass": "1.64.2",
     "sass-loader": "10.2.0",
-    "style-loader": "0.20.3",
+    "style-loader": "^1.3.0",
     "stylelint": "^9.1.2",
     "stylelint-webpack-plugin": "^0.10.1",
     "tapable": "^1.0.0",
