--- a/packages/slate-tools/package.json
+++ b/packages/slate-tools/package.json
@@ -19,7 +19,7 @@
     "@shopify/slate-env": "1.0.0-beta.16",
     "@shopify/slate-liquid-asset-loader": "1.0.0-beta.11",
     "@shopify/slate-sections-plugin": "1.0.0-beta.19",
-    "@shopify/slate-sync": "https://github.com/thecitizenry/slate/releases/download/v1.2.0/shopify-slate-sync-1.2.0.tgz",
+    "@shopify/slate-sync": "/Users/kevinoleary/code/slate/packages/slate-tools/v1.3.0/shopify-slate-sync-1.3.0.tgz",
     "@shopify/slate-tag-webpack-plugin": "1.0.0-beta.14",
     "@shopify/slate-translations": "1.0.0-beta.19",
     "@shopify/theme-lint": "^2.0.0",
