--- a/packages/slate-tools/package.json
+++ b/packages/slate-tools/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/slate-tools",
-  "version": "1.3.0",
+  "version": "1.2.0",
   "description": "A modern development toolkit for Shopify themes",
   "repository": "https://github.com/Shopify/slate/tree/1.x/packages/slate-tools",
   "license": "MIT",
@@ -19,7 +19,7 @@
     "@shopify/slate-env": "1.0.0-beta.16",
     "@shopify/slate-liquid-asset-loader": "1.0.0-beta.11",
     "@shopify/slate-sections-plugin": "1.0.0-beta.19",
-    "@shopify/slate-sync": "/Users/kevinoleary/code/slate/packages/slate-sync/shopify-slate-sync-1.3.0.tgz",
+    "@shopify/slate-sync": "https://github.com/thecitizenry/slate/releases/download/v1.3.0/shopify-slate-sync-1.2.0.tgz",
     "@shopify/slate-tag-webpack-plugin": "1.0.0-beta.14",
     "@shopify/slate-translations": "1.0.0-beta.19",
     "@shopify/theme-lint": "^2.0.0",
@@ -57,7 +57,7 @@
     "inquirer": "^5.0.1",
     "ip": "^1.1.5",
     "jest": "22.4.2",
-    "mini-css-extract-plugin": "^1.6.2",
+    "mini-css-extract-plugin": "^0.12.0",
     "minimatch": "^3.0.4",
     "minimist": "1.2.0",
     "ora": "^2.0.0",
@@ -70,7 +70,7 @@
     "react-dev-utils": "0.5.2",
     "sass": "1.64.2",
     "sass-loader": "10.2.0",
-    "style-loader": "^2.0.0",
+    "style-loader": "^1.3.0",
     "stylelint": "^9.1.2",
     "stylelint-webpack-plugin": "^0.10.1",
     "tapable": "^1.0.0",
