--- a/packages/slate-tools/package.json
+++ b/packages/slate-tools/package.json
@@ -57,7 +57,7 @@
     "inquirer": "^5.0.1",
     "ip": "^1.1.5",
     "jest": "22.4.2",
-    "mini-css-extract-plugin": "^0.12.0",
+    "mini-css-extract-plugin": "1.6.2",
     "minimatch": "^3.0.4",
     "minimist": "1.2.0",
     "ora": "^2.0.0",
