--- a/packages/slate-tools/package.json
+++ b/packages/slate-tools/package.json
@@ -39,7 +39,7 @@
     "cors": "^2.8.4",
     "cross-spawn": "5.1.0",
     "css-loader": "^5.2.7",
-    "cssnano": "3.10.0",
+    "cssnano": "^6.0.1",
     "escape-string-regexp": "1.0.5",
     "eslint": "^4.12.0",
     "eslint-loader": "2.0.0",
@@ -76,7 +76,8 @@
     "tapable": "^1.0.0",
     "uglifyjs-webpack-plugin": "^1.0.1",
     "uuid": "^3.2.1",
-    "webpack": "4.36.1",
+    "vue-style-loader": "^4.1.3",
+    "webpack": "4.47",
     "webpack-dev-middleware": "3.4.0",
     "webpack-hot-middleware": "2.21.2",
     "webpack-merge": "4.1.2",
