feat: builder sdk compat

--- a/packages/slate-tools/package.json
+++ b/packages/slate-tools/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/slate-tools",
-  "version": "1.4.0",
+  "version": "1.5.0",
   "description": "A modern development toolkit for Shopify themes",
   "repository": "https://github.com/Shopify/slate/tree/1.x/packages/slate-tools",
   "license": "MIT",
@@ -13,13 +13,15 @@
   },
   "engine": ">=8.9.4",
   "dependencies": {
+    "@babel/cli": "^7.24.1",
+    "@babel/core": "^7.24.3",
     "@shopify/html-webpack-liquid-asset-tags-plugin": "1.0.0-beta.11",
     "@shopify/slate-config": "1.0.0-beta.14",
     "@shopify/slate-cssvar-loader": "1.0.0-beta.16",
     "@shopify/slate-env": "1.0.0-beta.16",
     "@shopify/slate-liquid-asset-loader": "1.0.0-beta.11",
     "@shopify/slate-sections-plugin": "1.0.0-beta.19",
-    "@shopify/slate-sync": "https://github.com/thecitizenry/slate/releases/download/v1.4.0/shopify-slate-sync-1.4.0.tgz",
+    "@shopify/slate-sync": "https://github.com/thecitizenry/slate/releases/download/v1.5.0/shopify-slate-sync-1.5.0.tgz",
     "@shopify/slate-tag-webpack-plugin": "1.0.0-beta.14",
     "@shopify/slate-translations": "1.0.0-beta.19",
     "@shopify/theme-lint": "^2.0.0",
@@ -27,9 +29,8 @@
     "archiver": "^2.1.0",
     "array-flatten": "^2.1.1",
     "autoprefixer": "10.4.16",
-    "babel-cli": "6.26.0",
     "babel-jest": "20.0.3",
-    "babel-loader": "7.1.4",
+    "babel-loader": "8.3.0",
     "browser-sync": "^2.24.6",
     "chalk": "2.3.2",
     "clean-webpack-plugin": "0.1.19",
